# family-dashboard

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  003_seed_config.sql  004_chore_manager.sql  005_music_play_log.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs
backend/src/integrations/: config_helpers.rs  mod.rs
backend/src/integrations/chores/: assignments.rs  chores_crud.rs  mod.rs  models.rs  people.rs  routes.rs  weeks.rs
backend/src/integrations/config/: mod.rs  routes.rs
backend/src/integrations/daily_quote/: mod.rs  routes.rs
backend/src/integrations/driving_time/: cache.rs  mod.rs  routes.rs
backend/src/integrations/google_calendar/: auth.rs  mod.rs  models.rs  routes.rs
backend/src/integrations/jokes/: mod.rs  routes.rs
backend/src/integrations/music/: mod.rs  proxy.rs  routes.rs  sse.rs  types.rs
backend/src/integrations/nutrislice/: mod.rs  routes.rs
backend/src/integrations/ollama/: mod.rs  routes.rs
backend/src/integrations/on_this_day/: mod.rs  routes.rs  types.rs
backend/src/integrations/sports/: cache.rs  espn.rs  mod.rs  preview.rs  routes.rs  transform.rs  types.rs
backend/src/integrations/trivia/: mod.rs  routes.rs
backend/src/integrations/weather/: mod.rs  routes.rs
backend/src/models/: google.rs  lunch_menu.rs  mod.rs
backend/src/routes/: chores.rs  config.rs  google_auth.rs  google_calendar.rs  ha_proxy.rs  lunch_menu.rs  mod.rs  nutrislice.rs  weather.rs
backend/tests/: chores_test.rs  helpers.rs  lunch_menu_test.rs  sports_test.rs
(+229 files in other folders)
