[package]
name = "dashboard-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["form", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
urlencoding = "2.1.3"

[dev-dependencies]
axum-test = "19.1.1"
